--- a/src/pages/client/create.css
+++ b/src/pages/client/create.css
@@ -1,5 +1,10 @@
+.material-icons.account { 
+    color: #ffffff; 
+    size: 80px;
+}
+
 .title {
-    padding-top: 4em;
+    padding-top: 2em;
     text-align: center;
 }
 
@@ -8,4 +13,9 @@
     padding-right: 10em;
     padding-left: 10em;
     color: white;
+}
+
+.cb {
+    text-align: center;
+    padding-bottom: 1em;
 }
