--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -23,10 +23,33 @@ h1 {
     padding-top: calc(100vh * 0.3);
     height: 100vh;
     width: 70vw;
-    background-color: black;
+    background-color: #212121;
     margin: 0;
 }
 
 .input-section {
     margin-left: 35%;
+}
+
+.btn {
+    color: white;
+}
+
+.btn-secondary {
+    text-decoration: none;
+    color: white;
+}
+
+a {
+    color: white;
+}
+
+a:link {
+    text-decoration: none;
+    color: white;
+}
+
+a:visited {
+    text-decoration: inherit;
+    color: inherit;
 }
