--- a/src/pages/advisor/home.css
+++ b/src/pages/advisor/home.css
@@ -93,6 +93,12 @@ rgba(33,33,33,255) */
     align-self: center;
 }
 
+.space-between>div:nth-child(4) {
+    margin-left: 80%;
+    position: absolute;
+    align-self: center;
+}
+
 .space-between {
     text-align: left;
     align-self: flex-start;
