--- a/src/pages/advisor/home.css
+++ b/src/pages/advisor/home.css
@@ -78,6 +78,8 @@ rgba(33,33,33,255) */
     height: calc(9vh);
     border-radius: 10px;
     justify-content: space-between;
+    align-items: flex-end;
+    align-content: flex-start;
 }
 
 .card-icons-but {
